# eagerx_interbotix

./: .gitignore  CHANGELOG.md  Makefile  README.rst  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
assets/: config  meshes  urdf  xsarm_description.launch
assets/calibrations/: 2022-08-10-1309_logitech_c922_vx300s_inaccurate_0_031error.yaml  2022-08-10-1413_logitech_camera_vx300s_inaccurate_0_029error.yaml  alienware_camera.yaml  c170.yaml  c920.yaml  extrinsic.yaml  eye_hand_calibration_2022-08-10-1726.yaml  eye_hand_calibration_2022-08-10-1757.yaml  eye_hand_calibration_2022-08-11-1659_gripper_link.yaml  eye_hand_calibration_2022-08-12-1450.yaml  eye_hand_calibration_2022-08-16-1810.yaml  eye_hand_calibration_2023-02-17-1553.yaml  eye_hand_calibration_2023-02-20-0837.yaml  eye_hand_calibration_2023-02-22-1128.yaml  eye_hand_calibration_2023-03-01-0927.yaml  eye_hand_calibration_2023-03-01-0928.yaml  eye_hand_calibration_2023-03-01-0929.yaml  eye_hand_calibration_2023-03-20-1037.yaml  logitech_c170.yaml  logitech_c170_2023_02_17.yaml  logitech_c920.yaml  logitech_camera.yaml
assets/logitech_c920/: camera.yaml
cfg/: eval.yaml  train.yaml
eagerx_interbotix/: __init__.py  aruco_detector.py  create_graphs.py  env.py  eval.py  goal_env.py  interbotix_mr_descriptions.py  plot_results.py  record.py  safety_node.py  train.py  utils.py
eagerx_interbotix/camera/: __init__.py  calibration.py  enginestates.py  objects.py
eagerx_interbotix/camera/assets/: realsense2_d435.urdf
eagerx_interbotix/camera/pybullet/: __init__.py  enginenodes.py
eagerx_interbotix/camera/real/: __init__.py  enginestates.py
eagerx_interbotix/demo/: __init__.py
eagerx_interbotix/ik/: node.py
eagerx_interbotix/overlay/: node.py
eagerx_interbotix/reset/: __init__.py  node.py
eagerx_interbotix/safety/: __init__.py  collision.py  node.py  workspaces.py
eagerx_interbotix/smith/: node.py
eagerx_interbotix/solid/: __init__.py  goal.py  objects.py  solid.py  yaw_node.py
eagerx_interbotix/solid/assets/: box.urdf  box_goal.urdf  can.urdf  circle_goal.urdf  surface.urdf
eagerx_interbotix/solid/pybullet/: __init__.py  enginestates.py
eagerx_interbotix/solid/real/: enginenodes.py  enginestates.py
eagerx_interbotix/vx300s/: __init__.py  converters.py  objects.py
eagerx_interbotix/vx300s/pybullet/: __init__.py
eagerx_interbotix/vx300s/real/: __init__.py
eagerx_interbotix/xseries/: __init__.py  converters.py  mr_descriptions.py  objects.py  processor.py  xseries.py
eagerx_interbotix/xseries/pybullet/: __init__.py  enginenodes.py  enginestates.py
eagerx_interbotix/xseries/real/: __init__.py  enginenodes.py  enginestates.py
examples/: animate.py  aruco_base.py  box_pushing.py  cluster_training.py  cluster_training.sh  cluster_training_test.py  cluster_training_test.sh  collect_dataset.py  demo_modular.py  demo_real.py  eval_position.py  eval_velocity_box.py  evaluate.py  evaluate_box.py  evaluate_model.py  evaluate_real.py  evaluate_smith.py  example.py  example_pybullet.py  extrinsic_calibration.py  finetune.py  finetune_ik_box.py  finetune_no_orientation.py  finetune_test.py  gif_velocity_box.py  ik_box.py  ik_box_no_ori.py  ik_box_stacking.py  load_dataset.py  position.py  position_box.py  px150.py  record.py  train_model.py  velocity.py  velocity_box.py
examples/deprecated/: ik_box.py  velocity_box.py
exps/train/cluster_graphs/: graph_delay.yaml  graph_friction.yaml
exps/train/graphs/: graph_baseline.yaml  graph_delay_friction.yaml
logs/HER_force_torque_2022-10-13-1836/: graph.yaml
notebooks/: opendr_demo-Copy1.ipynb  opendr_demo.ipynb
scripts/: cluster_training.sh
tests/: test_import.py  test_interbotix.py
(+77 files in other folders)
