[tool.poetry]
name = "eagerx_interbotix"
version = "0.1.1"
license = "Apache2.0"
description = "EAGERx interface to interbotix robot arms."
authors = ["Jelle Luijkx <j.d.luijkx@tudelft.nl>", "Bas van der Heijden <d.s.vanderheijden@tudelft.nl>"]
homepage = "https://github.com/eager-dev/eagerx_interbotix"
repository = "https://github.com/eager-dev/eagerx_interbotix"
documentation = "https://eagerx.readthedocs.io/en/master/"
include = ["descriptions"]

[tool.poetry.dependencies]
python = "^3.6.2"
eagerx-gui = "^0.1.4"
eagerx-pybullet = "^0.1.0"
eagerx-reality = "^0.1.4"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
pytest = "^7.0"
pytest-cov = "^3.0.0"
pytest-timeout = "^2.1.0"
flake8 = "^4.0.1"
flake8-bugbear = "^22.3.23"
#eagerx-pybullet = {path = "../eagerx_pybullet", develop = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = [
    "eagerx_interbotix/__init__.py:__version__",
    "pyproject.toml:version"
]
branch = "master"
upload_to_pypi = true
upload_to_release = true
build_command = "pip install poetry && poetry build"
